[package]
name = "dawn"
version = "0.1.0"
authors = ["Hasan Ali <hasan@hasali.dev>"]
edition = "2018"

[workspace]
members = ["macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
hyper = { version = "0.14", features = ["http1", "runtime", "server"] }
log = "0.4"
routefinder = "0.4"

dawn-macros = { path = "macros" }

[dev-dependencies]
env_logger = "0.8"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }
