[package]
name = "atium"
version = "0.1.0"
authors = ["Hasan Ali <hasan@hasali.dev>"]
edition = "2018"

[workspace]
members = ["macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atium-macros = { path = "macros" }

async-trait = "0.1"
log = "0.4"
routefinder = "0.4"
serde = "1.0"
serde_json = "1.0"

[dependencies.hyper]
version = "0.14"
features = ["http1", "runtime", "server", "stream"]

[dev-dependencies]
env_logger = "0.8"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }
